--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
-
+<div class="wrapper">
+    <section class="form signup">
+        <header>Le chat de Jobba</header>
+        <form action="#">
+            <div class="error-txt">C'est une erreur</div>
+            <div class="nape-details">
+                <div class="field">
+                    <label>Prénom</label>
+                    <input type="text" placeholder="Votre prénom"/>
+                </div>
+                <div class="field">
+                    <label>Nom</label>
+                    <input type="text" placeholder="Votre nom"/>
+                </div>
+                <div class="field">
+                    <label>Email</label>
+                    <input type="text" placeholder="Votre email"/>
+                </div>
+                <div class="field">
+                    <label>Mot de passe</label>
+                    <input type="text" placeholder="Entrez un mot de passe"/>
+                </div>
+                <div class="field">
+                    <label>Image de profil</label>
+                    <input type="file"/>
+                </div>
+                <div class="field">
+                    <input type="submit" placeholder="Continuer vers le chat">
+                </div>
+            </div>
+        </form>
+        <div class="link">Déjà inscrit ? <a href="#">Connexion</a></div>
+    </section>
+</div>
 </body>
 </html>
